--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/adityas3190/sample-mean#readme",
   "dependencies": {
+    "async": "^2.6.1",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "mongodb": "^2.2.31",
